parser/tests/snapshots/errors__contract_field_after_def.snap
---
source: parser/tests/errors.rs
expression: err

---
error: contract field definitions must come before any function or event definitions
  ┌─ [test snippet]:5:3
  │
5 │   x: u8
  │   ^^^^^


